# for_franka_ros

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
config/: franka_servo_config.yaml  goal_poses.yaml  pose_tracking.yaml  robot_config.yaml  topics.yaml
include/: control_arm.h  control_arm_servo.h  franka_ik.h  lab0_hocook_Q.txt  lab0_hocook_Q1.txt  lab0_hocook_Q_12.txt  lab0_hocook_Q_13.txt  lab0_hocook_Q_14.txt  lab0_hocook_Q_15.txt  lab0_hocook_Q_17.txt  lab0_hocook_Q_18.txt  lab0_hocook_Q_21.txt  lab0_hocook_Q_22.txt  lab0_hocook_Q_3.txt  lab0_hocook_Q_4.txt  lab0_hocook_Q_5.txt  lab0_hocook_Q_8.txt  lab0_hocook_Qd_14.txt  lab0_hocook_Qd_15.txt  lab0_hocook_Qd_22.txt  lab0_hocook_Qd_5.txt  lab0_hocook_Qd_7.txt  lab0_hocook_Qd_8.txt  lab0_hocook_Qdd2.txt  lab0_hocook_Qdd_11.txt  lab0_hocook_Qdd_15.txt  lab0_hocook_Qdd_18.txt  lab0_hocook_Qdd_19.txt  lab0_hocook_Qdd_21.txt  lab0_hocook_Qdd_23.txt  lab0_hocook_Qdd_3.txt  lab0_hocook_Qdd_4.txt  lab0_hocook_Qdd_8.txt  lab0_hocook_Qdd_9.txt  status_monitor.h
include/hocook_trajectories_lab/: lab0_hocook_Q2.txt  lab0_hocook_Q_10.txt  lab0_hocook_Q_11.txt  lab0_hocook_Q_16.txt  lab0_hocook_Q_19.txt  lab0_hocook_Q_23.txt  lab0_hocook_Q_6.txt  lab0_hocook_Q_7.txt  lab0_hocook_Q_9.txt  lab0_hocook_Qd.txt  lab0_hocook_Qd1.txt  lab0_hocook_Qd2.txt  lab0_hocook_Qd_10.txt  lab0_hocook_Qd_11.txt  lab0_hocook_Qd_12.txt  lab0_hocook_Qd_13.txt  lab0_hocook_Qd_16.txt  lab0_hocook_Qd_17.txt  lab0_hocook_Qd_18.txt  lab0_hocook_Qd_19.txt  lab0_hocook_Qd_21.txt  lab0_hocook_Qd_23.txt  lab0_hocook_Qd_3.txt  lab0_hocook_Qd_4.txt  lab0_hocook_Qd_6.txt  lab0_hocook_Qd_9.txt  lab0_hocook_Qdd.txt  lab0_hocook_Qdd1.txt  lab0_hocook_Qdd_10.txt  lab0_hocook_Qdd_12.txt  lab0_hocook_Qdd_13.txt  lab0_hocook_Qdd_14.txt  lab0_hocook_Qdd_16.txt  lab0_hocook_Qdd_17.txt  lab0_hocook_Qdd_22.txt  lab0_hocook_Qdd_5.txt  lab0_hocook_Qdd_6.txt  lab0_hocook_Qdd_7.txt
launch/: for_joy.launch  for_lab.launch  for_real_robot_lab.launch  for_servo_lab.launch  for_servo_real_robot_lab.launch  pose_tracking.launch
scripts/: .gitignore  arm_joy.py  kalip_utils.py  or_lab.py  or_lab1.py  or_lab2.py  or_lab2_dirty.py  or_lab3.py  record_bags.sh  recorded_data.bag  send_to_kalip.py  utils.py
scripts/lab/: or_lab.py  or_lab1.py  or_lab2.py
scripts/lab_plots/: plot_or_lab3.py
scripts/recorded_data/: control_arm_node-tool-current_pose.csv  hocook-joint_states.csv  joint_states.csv  p2p-joint_states.csv  position_joint_trajectory_controller-command.csv
src/: control_arm.cpp  control_arm_servo.cpp  control_arm_servo_node.cpp  pick_place_tutorial_real_robot.cpp
